--- a/app/views/main.html
+++ b/app/views/main.html
@@ -40,15 +40,15 @@
     <div class="tickCountBtns">
       <button class="tickUrgentBtn" ng-click="red()">
         <span class="tickBtnName redlabel">Negative</span>
-        <span class="tickBtnNum">{{redCount()}}</span>
+        <span class="tickBtnNum">{{rcount}}</span>
       </button>
       <button class="tickBadBtn" ng-click="yellow()">
         <span class="tickBtnName yellowlabel">Neutral</span>
-        <span class="tickBtnNum">{{yellowCount()}}</span>
+        <span class="tickBtnNum">{{ycount}}</span>
       </button>
       <button class="tickArchivedBtn" ng-click="green()">
         <span class="tickBtnName greenlabel">Positive</span>
-        <span class="tickBtnNum">{{greenCount()}}</span>
+        <span class="tickBtnNum">{{gcount}}</span>
       </button>
     </div>
   </div>
